--- a/RedisHibernateL2Cache/src/main/resources/application.properties
+++ b/RedisHibernateL2Cache/src/main/resources/application.properties
@@ -1,4 +1,23 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
+
+
+# common spring boot settings
+
+#spring.redis.database=
+spring.redis.host=192.168.1.221
+spring.redis.port=6379
+#spring.redis.password=
+#spring.redis.ssl=
+#spring.redis.timeout=
+spring.redis.cluster.nodes=192.168.1.221:7001,192.168.1.221:7002,192.168.1.221:7003,192.168.1.221:7004,192.168.1.221:7005,192.168.1.221:7006
+#spring.redis.sentinel.master=
+#spring.redis.sentinel.nodes=
+
+# Redisson settings
+
+#path to config - redisson.yaml
+spring.redis.redisson.config=classpath:redisson.yaml
