--- a/RedisHibernateL2Cache/src/main/resources/application.properties
+++ b/RedisHibernateL2Cache/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 # common spring boot settings
 
@@ -18,6 +20,8 @@ spring.redis.cluster.nodes=192.168.1.221:7001,192.168.1.221:7002,192.168.1.221:7
 #spring.redis.sentinel.nodes=
 
 # Redisson settings
-
+redis.expiryInSeconds.default=360
+redis.expiryInSeconds.hibernate.common=0
+redis.expiryInSeconds.hibernate.account=1200
 #path to config - redisson.yaml
 spring.redis.redisson.config=classpath:redisson.yaml
