--- a/RedisHibernateL2Cache/src/main/resources/application.properties
+++ b/RedisHibernateL2Cache/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 
 hibernate.cache.use_second_level_cache=true
-hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.use_query_cache=true
+
+# for ehcache org.hibernate.cache.ehcache.EhCacheRegionFactory
+# for Redisson PRO org.redisson.hibernate.RedissonLocalCachedRegionFactory
+hibernate.cache.region.factory_class=org.redisson.hibernate.RedissonRegionFactory
 
 # common spring boot settings
 
@@ -25,3 +29,5 @@ redis.expiryInSeconds.hibernate.common=0
 redis.expiryInSeconds.hibernate.account=1200
 #path to config - redisson.yaml
 spring.redis.redisson.config=classpath:redisson.yaml
+hibernate.cache.redisson.config=classpath:redisson.yaml
+
