--- a/RedisHibernateL2Cache/pom.xml
+++ b/RedisHibernateL2Cache/pom.xml
@@ -21,6 +21,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+	        <exclusions>
+	            <!-- Exclude the Tomcat dependency -->
+	            <exclusion>
+	                <groupId>org.springframework.boot</groupId>
+	                <artifactId>spring-boot-starter-tomcat</artifactId>
+	            </exclusion>
+	        </exclusions>
+		</dependency>	
+                	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
@@ -37,17 +49,7 @@
 		    <artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-	        <exclusions>
-	            <!-- Exclude the Tomcat dependency -->
-	            <exclusion>
-	                <groupId>org.springframework.boot</groupId>
-	                <artifactId>spring-boot-starter-tomcat</artifactId>
-	            </exclusion>
-	        </exclusions>
-		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 		    <groupId>mysql</groupId>
@@ -60,6 +62,14 @@
 		    <artifactId>redisson</artifactId>
 		    <version>3.12.3</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.redisson/redisson-hibernate-53 -->
+		<dependency>
+		    <groupId>org.redisson</groupId>
+		    <artifactId>redisson-hibernate-53</artifactId>
+		    <version>3.10.0</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
