--- a/GrpcConnector/pom.xml
+++ b/GrpcConnector/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.fepoc</groupId>
-	<artifactId>CacheClientConnector</artifactId>
+	<artifactId>GrpcConnector</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CacheClientConnector</name>
-	<description>This projects implements connector features for Cache Client</description>
+	<name>GrpcConnector</name>
+	<description>This project that uses Grpc Connector</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -78,19 +78,56 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.fepoc</groupId>
-			<artifactId>GrpcConnector</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 
 	<build>
+<!-- 		<extensions> -->
+<!--             <extension> -->
+<!--                 <groupId>kr.motd.maven</groupId> -->
+<!--                 <artifactId>os-maven-plugin</artifactId> -->
+<!--                 <version>1.6.1</version> -->
+<!--             </extension> -->
+<!-- 		</extensions> -->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>		
+			</plugin>
+<!-- 	      <plugin> -->
+<!-- 	        <groupId>org.xolstice.maven.plugins</groupId> -->
+<!-- 	        <artifactId>protobuf-maven-plugin</artifactId> -->
+<!-- 	        <version>0.6.1</version> -->
+<!-- 	        <configuration> -->
+<!-- 	          <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact> -->
+<!-- 	          <pluginId>grpc-java</pluginId> -->
+<!-- 	          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact> -->
+<!-- 	        </configuration> -->
+<!-- 	        <executions> -->
+<!-- 	          <execution> -->
+<!-- 	            <goals> -->
+<!-- 	              <goal>compile</goal> -->
+<!-- 	              <goal>compile-custom</goal> -->
+<!-- 	            </goals> -->
+<!-- 	          </execution> -->
+<!-- 	        </executions> -->
+<!-- 	      </plugin> -->
+<!-- 	      <plugin> -->
+<!-- 	        <groupId>org.apache.maven.plugins</groupId> -->
+<!-- 	        <artifactId>maven-enforcer-plugin</artifactId> -->
+<!-- 	        <executions> -->
+<!-- 	          <execution> -->
+<!-- 	            <id>enforce</id> -->
+<!-- 	            <goals> -->
+<!-- 	              <goal>enforce</goal> -->
+<!-- 	            </goals> -->
+<!-- 	            <configuration> -->
+<!-- 	              <rules> -->
+<!-- 	                <requireUpperBoundDeps/> -->
+<!-- 	              </rules> -->
+<!-- 	            </configuration> -->
+<!-- 	          </execution> -->
+<!-- 	        </executions> -->
+<!-- 	      </plugin>			 -->
 		</plugins>
 	</build>
 
